Minicraft+ version 2.1.0

+ Added achievements
+ Added ability to copy, cut, and paste in menus
+ Added credits menu
+ Added the ability to use some ascii characters in world seed
+ Added ornate obsidian and ornate stone tiles
+ Added raw obsidian and stone tiles
+ Added a totem that will spawn the air wizard
+ Added resource packs
+ Re-added sparks
+ Re-added damage particles
+ Re-added item shadows
+ Re-added swimming animation
+ Re-added colored spawners
* Fixed crash when inputting certain characters into the inventory searcher
* Fixed crash when deleting world
* Fixed rendering of stair tiles in sky level
* Fixed rendering of cloud cactus in sky level
* Fixed time rendering for potions not following m:ss format
* Fixed some hits not hitting properly (0 attack damage)
* Made gem tools purple
* Prevented animals and mobs from de-spawning while in view
* Prevented furniture from being pushed over stair tiles
* Shear loses durability when used on sheep
* The world list should now update if copying or renaming worlds in-game
* Resource packs and skins menu now use the standardised menu look
* Pre-releases are now ignored from version check
* Renamed shear to shears
* Saplings should no longer grow if an entity is on it
* Made cloud cactus into an ore you can mine and use
- Removed texture packs
- Removed suits
- Removed second air wizard

Minicraft+ version 2.0.7

+ Added sheep shearing
+ Added shear tool
+ Added potatoes
+ Added baked potatoes as food
+ Made zombies drop potatoes
+ Added inventory searcher (F to toggle and Next/Back Page to seek)
+ Added fullscreen mode (default key F11)
+ Added Indonesian localization
+ Added Hungarian localization
+ Added SRV record support; service name is _minicraft (only accessable through code)
+ Added aggregate analytics for various game states and actions
+ Added new skin system with custom skin support
+ Added Built-in Contest Winners' Skins into the Skins Menu
* Sparks (the airwizard bullets) have been optimised